@@ -18,7 +18,7 @@ repositories {
 
 javafx {
     version = "11"
-    modules = ['javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.base']
+    modules = ['javafx.controls', 'javafx.fxml', 'javafx.graphics']
 }
 
 dependencies {
@@ -50,11 +50,12 @@ javadoc {
 }
 
 application {
-    mainClassName = 'jscolendar.App'
+    mainClassName = 'jscolendar.Launcher'
 }
 
 run {
     jvmArgs = [
+            "--add-exports=javafx.base/com.sun.javafx.runtime=ALL-UNNAMED",
             "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
             "--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
             "--add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
